# ppi

./: .bazelrc  .clang-format  .gitignore  .gitmodules  .travis.yml  BUILD.gn  DEPS  README.md  WORKSPACE
.circleci/: config.yml
base/: BUILD  base.h
computer/: BUILD  README.md  computer.cc  computer.h
data/: pi_hex_1000.txt
drm/: BUILD  chudnovsky.cc  chudnovsky.h  drm3.cc  drm3.h  ramanujan.h
fmt/: BUILD  README.md  dft.cc  fmt.h  rft.h
number/: BUILD  complex.h  integer.cc  integer.h  number.h  real.h
ppi/: BUILD  main.cc
src/: .clang-format  BUILD.gn  CMakeLists.txt
src/base/: BUILD.gn  CMakeLists.txt  allocator.cc  allocator.h  base.cc  base.h  complex.h  macros.h  time.cc  time.h  timer.cc  timer.h  util.cc  util.h
src/bbp/: BUILD.gn  bbp.cc  bbp.h  bbp_gpu.cc  bbp_gpu.h  bbp_test.cc  main.cc
src/drm/: BUILD.gn  chudnovsky.cc  chudnovsky.h  drm.cc  drm.h  ramanujan.cc  ramanujan.h
src/fmt/: BUILD.gn  CMakeLists.txt  dft.cc  dft.h  dft_examine.cc  dft_test.cc  dwt.cc  dwt.h  dwt_test.cc  fft.cc  fft.h  fft_examine.cc  fft_test.cc  fmt.cc  fmt.h  fmt_test.cc  ntt.cc  ntt.h  ntt_test.cc  rft.cc  rft.h  rft_test.cc
src/number/: BUILD.gn  CMakeLists.txt  float.cc  float.h  float_test.cc  integer.cc  integer.h  integer_core.cc  integer_core.h  integer_core_test.cc  integer_piece.cc  integer_piece.h  integer_piece_test.cc  integer_test.cc  internal.cc  internal.h  montgomery.cc  montgomery.h  natural.cc  natural.h  natural_benchmark.cc  natural_test.cc  number.gni  number.h  real.cc  real.h  real_test.cc  uint128.h
src/number/decimal/: add.cc  decimal.h  div.cc  mult.cc  natural.cc  ostream.cc  subtract.cc
src/number/hex/: add.cc  div.cc  mult.cc  ostream.cc  subtract.cc
src/number/internal/: add.h
src/pi/: BUILD.gn  CMakeLists.txt  arctan.cc  arctan.h  computer.h  drm.cc  drm.h  main.cc  pi.cc  pi.h  pi_benchmark.cc  pi_computer.h  pi_main.cc
src/refer/: schonhage.py
