import("//build/toolchain/gpu_toolchain.gni")

static_library("bbp") {
  sources = [
     "bbp.cc",
     "bbp.h",
  ]
  deps = [
    "//src/base($default_toolchain)",
    "//src/number($default_toolchain)",
    "//src/number:montgomery($default_toolchain)"
  ]
}

# ------------------------------------------

group("bbp_exec") {
  deps = [
    ":bbp_main",
  ]
  if (gpu_toolchain != "") {
    deps += [ ":bbp_gpu($gpu_toolchain)" ]
  }
}

executable("bbp_main") {
  sources = [ "main.cc" ]
  deps = [
    ":bbp",
    "//src/base",
    "//third_party/glog",
    "//third_party/gflags",
  ]
}

if (current_toolchain == gpu_toolchain) {
  executable("bbp_gpu") {
    sources = [ "main.cc" ]
    deps = [
      ":bbp($gpu_toolchain)",
      "//src/base($default_toolchain)",
      "//third_party/glog",
      "//third_party/gflags",
    ]
  }
}

executable("bbp_test") {
  testonly = true
  sources = [ "bbp_test.cc" ]
  deps = [
    ":bbp",
    "//src/base",
    "//third_party/gtest",
    "//third_party/gtest:gtest_main",
  ]
}

