static_library("drm") {
  sources = [
    "drm.h",
    "drm.cc",
  ]
  deps = [
    "//src/base",
    "//src/number"
  ]
}

static_library("ramanujan") {
  sources = [
    "ramanujan.h",
    "ramanujan.cc",
  ]
  deps = [
    ":drm"
  ]
}

executable("drm_test") {
  testonly = true

  sources = [
    "drm_test.cc"
  ]
  deps = [
    ":drm",
    "//src/number",
    "//third_party/gtest",
    "//third_party/gtest:gtest_main",
  ]
}
