static_library("pi") {
  sources = [
    "arctan.cc",
    "arctan.h",
  ]
  deps = [
    "//src/base",
    "//src/drm",
    "//src/number",
  ]
}

# ----------------------------------------------------------------------

executable("ppi") {
  sources = [ "main.cc" ]
  deps = [
    ":pi",
    "//third_party/gflags",
    "//third_party/glog",
  ]
}

executable("pi_benchmark") {
  testonly = true
  sources = [ "pi_benchmark.cc" ]
  deps = [
    ":pi",
    "//third_party/benchmark",
    "//third_party/benchmark:benchmark_main",
  ]
}
